--- a/AJAX_Javascript/index.css
+++ b/AJAX_Javascript/index.css
@@ -1,55 +1,50 @@
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 .ajax-box {
-    margin: 0 auto;
-    padding-top: 30px;
-    background-color: bisque;
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    height: 400px;
-    justify-content: space-between;
-    align-content: center;
-    align-items: center;
+  margin: 0 auto;
+  padding-top: 30px;
+  background-color: bisque;
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  height: 400px;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
 }
 
-
 .ajax-result {
-    text-align: center;
-    background-color: aliceblue;
-    margin: 20px 20px;
-    flex: 3 1 20%;
-    width: 80%;
-    
+  text-align: center;
+  background-color: aliceblue;
+  flex-grow: 1 1 20%;
+  width: 80%;
 }
 
 .btn-ajax {
-    
 }
 
 #get_resp {
-    width: 60%;
-    height: 200px;
-    text-align: left;
+  width: 60%;
+  height: 200px;
+  text-align: left;
 }
 
 #ajax-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 60%;
-    padding: 10px 10px;
-    border: 1px solid red;
-    margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 60%;
+  padding: 10px 10px;
+  border: 1px solid red;
+  margin-bottom: 20px;
 }
 
 #post_resp {
-    height: 200px;
-    background-color: aliceblue;
-    margin-top: 10px;
-    margin-bottom: 20px;
+  height: 200px;
+  background-color: aliceblue;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
