--- a/google-search-bar/style.css
+++ b/google-search-bar/style.css
@@ -12,8 +12,7 @@
 .search-bar {
     /* google search bar style */
     display: flex;
-    /* align-items: center;
-    justify-content: space-between; */
+    align-items: center;
     background: #fff;
     width: 100%;
     height: 44px;
@@ -30,23 +29,60 @@
     border-color: rgba(223,225,229,0);
     border-bottom: 0;
 }
+.input-box{
+    flex: 1 1 85%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
 
-#search {
+#input-search {
+    flex: 1 1 auto;
     /* override browser default input style */
     outline: none;
     border: 0;
-    width: 90%;
     height: 100%;
     background-color:transparent;
     border-radius: 10px;
     font-size: 24px;
     padding-left: 20px;
 }
+
+.input-controls {
+    height: 100%;
+    display: none;
+    align-items: center;
+    flex: 0 0 auto;
+}
+
+.clear-btn{
+    outline: none;
+    border: 0;
+    font-size: 22px;
+    color: gray;
+    background:transparent;
+    margin-right: 8px;
+    cursor: pointer;
+}
+.input-divider{
+    border-left: 2px solid rgb(231, 228, 228);
+    height: 65%;
+}
+
 #search-btn{
     border:0;
     background: transparent;
     cursor: pointer;
+    padding-right: 10px;
+    flex: 0 0 auto;
+
 }
+#search-btn img{
+    width: 30px;
+    height: 30px;
+}
+
 #search-btn:focus,
 #search-btn:active,
 #search-btn img:active,
@@ -55,7 +91,11 @@
     outline: none;
 }
 
+
+
 .dropdown-container{
+    /* override browser default dropdown for search input */
+    z-index: 1000;
     position: absolute;
     width: 100%;
     height: 250px;
@@ -69,6 +109,7 @@
     background-color: #fff;
     box-shadow: 0 9px 8px -3px rgb(64 60 67 / 24%), 8px 0 8px -7px rgb(64 60 67 / 24%), -8px 0 8px -7px rgb(64 60 67 / 24%);
     display: none;
+    flex-direction: column;
 
 }
 .separator{
@@ -87,7 +128,6 @@
 
 .open {
     display: flex;
-    flex-direction: column;
 }
 
 .dropdown > li:hover,
