--- a/google-search-bar/style.css
+++ b/google-search-bar/style.css
@@ -1,14 +1,15 @@
-
 * {
     margin: 0;
     box-sizing: border-box;
 }
 
+/**************** Container  *************/
 .search-box{
     width: 690px;
     position: relative;
     margin: 100px auto;
 }
+/**************** Search Bar  *************/
 .search-bar {
     /* google search bar style */
     display: flex;
@@ -36,7 +37,6 @@
     align-items: center;
     height: 100%;
 }
-
 #input-search {
     flex: 1 1 auto;
     /* override browser default input style */
@@ -48,14 +48,12 @@
     font-size: 24px;
     padding-left: 20px;
 }
-
 .input-controls {
     height: 100%;
     display: none;
     align-items: center;
     flex: 0 0 auto;
 }
-
 .clear-btn{
     outline: none;
     border: 0;
@@ -69,7 +67,6 @@
     border-left: 2px solid rgb(231, 228, 228);
     height: 65%;
 }
-
 #search-btn{
     border:0;
     background: transparent;
@@ -82,7 +79,6 @@
     width: 30px;
     height: 30px;
 }
-
 #search-btn:focus,
 #search-btn:active,
 #search-btn img:active,
@@ -91,8 +87,7 @@
     outline: none;
 }
 
-
-
+/**************** DropDown  *************/
 .dropdown-container{
     /* override browser default dropdown for search input */
     z-index: 1000;
@@ -125,17 +120,9 @@
     margin: 0;
     padding: 0;
 }
-
 .open {
     display: flex;
 }
-
-.dropdown > li:hover,
-.li-selected{
-    background-color: rgb(233, 232, 232);
-    outline: none;
-}
-
 .dropdown-item {
     width: 100%;
     height: 40px;
@@ -144,11 +131,19 @@
     padding-left: 15px;
 }
 
+/**************** Accessibility  *************/
+.dropdown > li:hover,
+.li-selected{
+    background-color: rgb(233, 232, 232);
+    outline: none;
+}
+
+/************ Responsive UI on small screen **********/
 @media screen and (max-width: 768px) {
     .search-box{
         width: 90%;
     }
-    .dropdown {
-        height: 220px;
+    .dropdown-container {
+        height: 230px;
     }
 }
