--- a/ARIA-Tabs/horizontal-tabs/style.css
+++ b/ARIA-Tabs/horizontal-tabs/style.css
@@ -74,6 +74,7 @@ body {
     background: hsl(220, 43%, 99%);
     width: 400px;
     height: 120px;
+    overflow: auto;
   }
   
   [role="tabpanel"]:focus {
